Updating letter spacing for issues on FF 3.0 on Linux.
git-svn-id: https://svn-1.prod.hosting.acquia.com/opensource/trunk@720 ba871ea3-d002-4683-b738-bf6965e0a2a8

--- a/docroot/sites/default/themes/sitetheme/css/html-reset.css
+++ b/docroot/sites/default/themes/sitetheme/css/html-reset.css
@@ -23,6 +23,7 @@
  */
 body {
   font-size: 100%; /* Fixes exaggerated text resizing in IE6 and IE7 */
+  letter-spacing: 0; /* Some Firefox 3.0 installs on Linux seem to default to 1px */
 }
 
  
